<resources>
    <string name="app_name">mTHMMY</string>
    <string name="forum_url">https://www.thmmy.gr/smf/</string>
    <string name="forum_host">www.thmmy.gr</string>
    <string name="forum_host_simple">thmmy.gr</string>
    <string name="login">Login</string>
    <string name="login_spinner">Authenticating&#8230;</string>
    <string name="logout">Logout</string>
    <string name="downloads">Downloads</string>
    <string name="upload">Upload</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="bookmark">Bookmarks</string>
    <string name="info">Info</string>
    <string name="ok">OK</string>
    <string name="cancel">"Cancel"</string>
    <string name="user_agreement_dialog_text">"To use mTHMMY you have to agree to our Privacy Policy by choosing one of the options below. Choose \"Yes, I want to help\", if you consent to the collection of anonymized data that will help us improve the app. Otherwise, choose \"Nope, leave me alone\". You can change your preferences any time through the app's Settings.</string>
    <string name="user_consent_shared_preference_key">user_consent_shared_preference_key</string>
    <string name="recent">Recent</string>
    <string name="forum">Forum</string>
    <string name="unread">Unread</string>
    <string name="shoutbox">Shoutbox</string>
    <string name="refresh">Refresh</string>
    <string name="no_unread_topics">No unread topics!</string>
    <string name="mthmmy_logo">mTHMMY</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_continue_as_guest">Don\'t have an account? Continue as guest!</string>
    <string name="child_board_title">Child Boards</string>
    <string name="child_board_button">Exp/Coll</string>
    <string name="child_board_mods">Moderators</string>
    <string name="child_board_stats">Stats</string>
    <string name="child_board_last_post">Last post</string>
    <string name="topic_title">Topics</string>
    <string name="topic_subject">Subject</string>
    <string name="topic_started_by">Started by: %1$s</string>
    <string name="topic_stats">Stats</string>
    <string name="topic_last_post">Last post on: %1$s\nby %2$s</string>
    <string name="share">Share</string>
    <string name="post_author">Post author</string>
    <string name="post_subject">Post subject</string>
    <string name="post">Post</string>
    <string name="post_thumbnail">Thumbnail</string>
    <string name="post_quote_button">Quote button</string>
    <string name="post_overflow_menu_button">Overflow menu button</string>
    <string name="post_share_button">Share</string>
    <string name="post_delete_button">Delete</string>
    <string name="post_edit_button">Edit</string>
    <string name="user_number_of_posts">#%1$d</string>
    <string name="button_first">first</string>
    <string name="button_previous">previous</string>
    <string name="button_page">Page</string>
    <string name="button_next">next</string>
    <string name="button_last">last</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="submit">Submit</string>
    <string name="network_error_retry_prompt">Could not connect to thmmy.gr\n\nTap to retry</string>
    <string name="generic_network_error">Network error</string>
    <string name="retry">retry</string>
    <string name="unauthorized_topic_error">This topic is either missing or off limits to you</string>
    <string name="remove_vote_button">Remove vote</string>
    <string name="show_vote_results_button">show results</string>
    <string name="show_vote_options_button">hide results</string>
    <string name="pref_topic_drafts_key">preference-topic-drafts-key</string>
    <string name="reply_button">Reply</string>
    <string name="online_status_dot">●</string>
    <plurals name="error_too_many_checked">
        <item quantity="one">You may only select %d option</item>
        <item quantity="other">You may only select %d options</item>
    </plurals>
    <string name="username">Username</string>
    <string name="latest_posts_empty_message">This user has no posts yet</string>
    <string name="general_statistics_title">General Statistics</string>
    <string name="posting_activity_by_time_title">Posting Activity</string>
    <string name="most_popular_boards_by_posts_title">Most Popular Boards By Posts</string>
    <string name="most_popular_boards_by_activity_title">Most Popular Boards By Activity</string>
    <string name="version">v%1$s</string>
    <string name="logo">Logo</string>
    <string name="libraries">Libraries</string>
    <string name="libraries_text">mTHMMY uses the following open-source libraries:</string>
    <string name="apache_v2_0_libraries"><u>Apache v2.0 License libraries</u></string>
    <string name="the_mit_libraries"><u>The MIT License libraries</u></string>
    <string name="epl_libraries"><u>Eclipse Public License v1.0 libraries</u></string>
    <string name="other_libraries"><u>Other libraries</u></string>
    <string name="contact">Contact</string>
    <string name="contact_text">Do not hesitate to contact us for any matter, either by email at contact@thmmy.gr, or by joining our Discord server using https://discord.gg/CVt3yrn .</string>
    <string name="open_source">Open Source</string>
    <string name="open_source_text">The source code of mTHMMY can be found on Github at https://github.com/THMMYgr/mTHMMY, along with further details of how one can contribute.</string>
    <string name="trollPic">You should see a funny pic!</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="remove_bookmark">Remove</string>
    <string name="nothing_bookmarked_here">Nothing bookmarked here!</string>
    <string name="toggle_notification">Toggle Notification</string>
    <string name="fa_icon_star">&#xf005;</string>
    <string name="fa_file">&#xf15b;</string>
    <string name="fa_file_image_o">&#xf1c5;</string>
    <string name="fa_file_pdf_o">&#xf1c1;</string>
    <string name="fa_file_zip_o">&#xf1c6;</string>
    <string name="fa_file_text_o">&#xf0f6;</string>
    <string name="fa_file_word_o">&#xf1c2;</string>
    <string name="fa_file_powerpoint_o">&#xf1c4;</string>
    <string name="fa_file_excel_o">&#xf1c3;</string>
    <string name="fa_file_video_o">&#xf1c8;</string>
    <string name="fa_lock">&#xf023;</string>
    <string name="fa_folder">&#xf07b;</string>
    <string name="fa_circle">&#xf111;</string>
    <string name="fa_thumbtack">&#xf08d;</string>
    <string name="downloadPromptText">File \"%1$s\" already exists. Download again?"</string>
    <string name="download_symbol">Download Symbol</string>
    <string name="open">Open</string>
    <string name="download">Download</string>
    <string name="upload_button">Upload</string>
    <string name="upload_title_description_builder">Generate fields</string>
    <string name="upload_title_hint">Title</string>
    <string name="upload_filename">Upload as (filename)</string>
    <string name="upload_description_hint">Description</string>
    <string name="upload_select_file">Add files</string>
    <string name="upload_take_photo">Take photo</string>
    <string name="upload_spinners_hint">Select a category</string>
    <string name="upload_filename_info">Please follow the filename rules as\ndescribed
        in&#160;<a href="https://www.thmmy.gr/smf/index.php?topic=34294.0">this topic</a>.\n
        \nThis does not rename your local files.</string>
    <string name="upload_progress_dialog_title">Uploading</string>
    <string name="upload_progress_dialog_bytes_uploaded">Uploading: %1$.2f Kbit/s, %2$d/%3$d KBytes</string>
    <string name="upload_failed">"Upload failed"</string>
    <string name="upload_cancelled">"Upload canceled"</string>
    <string name="upload_resume_in_background">"Resume in background"</string>
    <string name="upload_retry">"Retry"</string>
    <string name="upload_fields_builder_type_radio_buttons_title">Select type of upload</string>
    <string name="upload_fields_builder_radio_button_exams">Exam subjects</string>
    <string name="upload_fields_builder_radio_button_exam_solutions">Exam solutions</string>
    <string name="upload_fields_builder_radio_button_notes">Course notes</string>
    <string name="upload_fields_builder_select_semester_title">Select period</string>
    <string name="upload_fields_builder_radio_button_feb">February</string>
    <string name="upload_fields_builder_radio_button_exam_jun">June</string>
    <string name="upload_fields_builder_radio_button_sept">September</string>
    <string name="upload_fields_builder_select_year_title">Select year</string>
    <string name="upload_fields_builder_year_hint">Year</string>
    <string name="upload_fields_builder_submit">Generate</string>
    <string name="upload_fields_builder_toolbar_title">Upload fields generator</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_category_app">App</string>
    <string name="pref_app_main_default_tab_key">pref_app_main_default_tab_key</string>
    <string name="pref_title_app_main_default_tab">Default home tab</string>
    <string name="pref_summary_app_main_default_tab">Sets a home screen tab as default</string>
    <string name="pref_app_main_default_tab_dialog_title">Default home tab</string>
    <string name="pref_app_display_relative_time_key">pref_app_display_relative_time_key</string>
    <string name="pref_title_display_relative_time">Display relative time</string>
    <string name="pref_summary_display_relative_time">Considering that you haven\'t set some weird custom time format</string>
    <string name="pref_category_notifications">Notifications</string>
    <string name="pref_title_notification_vibration_enable">Vibration</string>
    <string name="pref_title_notification_led_enable">Notifications led</string>
    <string name="pref_summary_notification_led_enable">Enables/disables the notifications led (if the device has one)</string>
    <string name="pref_title_notifications_sound">Notifications sound</string>
    <string name="pref_summary_notifications_sound">Sets your preferred notification sound</string>
    <string name="pref_category_posting">Posting</string>
    <string name="pref_title_posting_app_signature_enable">App signature</string>
    <string name="pref_summary_posting_app_signature_enable">Appends a \"sent from mTHMMY\" message to your posts</string>
    <string name="pref_category_privacy">Privacy</string>
    <string name="pref_privacy_crashlytics_enable_key">pref_privacy_crashlytics_enable_key</string>
    <string name="pref_title_privacy_crashlytics_enable">Crash data reports</string>
    <string name="pref_summary_privacy_crashlytics_enable">Automatically send us anonymized reports of errors and crashes</string>
    <string name="pref_privacy_analytics_enable_key">pref_privacy_analytics_enable_key</string>
    <string name="pref_title_privacy_analytics_enable">Analytics data reports</string>
    <string name="pref_summary_privacy_analytics_enable">Automatically send us anonymized data for analytical purposes</string>
    <string name="black">Black</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="pink">Pink</string>
    <string name="green">Green</string>
    <string name="purple">Purple</string>
    <string name="orange">Orange</string>
    <string name="blue">Blue</string>
    <string name="beige">Beige</string>
    <string name="brown">Brown</string>
    <string name="teal">Teal</string>
    <string name="navy">Navy</string>
    <string name="maroon">Maroon</string>
    <string name="lime_green">Lime Green</string>
</resources>