<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.PreferenceCategory android:title="@string/pref_category_app">
        <androidx.preference.ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/pref_app_main_default_tab_dialog_title"
            android:entries="@array/pref_app_main_default_tab_entries"
            android:entryValues="@array/pref_app_main_default_tab_values"
            android:key="pref_app_main_default_tab_key"
            android:title="@string/pref_title_app_main_default_tab"
            android:summary="@string/pref_summary_app_main_default_tab" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/pref_category_notifications">
        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="pref_notification_vibration_enable_key"
            android:title="@string/pref_title_notification_vibration_enable" />
        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="pref_notification_led_enable_key"
            android:title="@string/pref_title_notification_led_enable"
            android:summary="@string/pref_summary_notification_led_enable" />
        <Preference
            android:key="pref_notifications_select_sound_key"
            android:title="@string/pref_title_notifications_sound"
            android:summary="@string/pref_summary_notifications_sound" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:key="pref_category_posting_key"
        android:title="@string/pref_category_posting">
        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="pref_posting_app_signature_enable_key"
            android:title="@string/pref_title_posting_app_signature_enable"
            android:summary="@string/pref_summary_posting_app_signature_enable" />
    </androidx.preference.PreferenceCategory>

    <!--<androidx.preference.PreferenceCategory
        android:key="pref_category_uploading_key"
        android:title="@string/pref_category_uploading">
        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="pref_uploading_app_signature_enable_key"
            android:title="@string/pref_title_uploading_app_signature_enable"
            android:summary="@string/pref_summary_uploading_app_signature_enable" />
    </androidx.preference.PreferenceCategory>-->

    <androidx.preference.PreferenceCategory
        android:key="pref_category_privacy_key"
        android:title="@string/pref_category_privacy">
        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="@string/pref_privacy_crashlytics_enable_key"
            android:title="@string/pref_title_privacy_crashlytics_enable"
            android:summary="@string/pref_summary_privacy_crashlytics_enable" />
        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="@string/pref_privacy_analytics_enable_key"
            android:title="@string/pref_title_privacy_analytics_enable"
            android:summary="@string/pref_summary_privacy_analytics_enable" />
    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>