<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/rootLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/question_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.github.mikephil.charting.charts.HorizontalBarChart
        android:id="@+id/vote_chart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/error_too_many_checked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_too_many_checked"
        android:textColor="@color/red"
        android:visibility="gone"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/remove_vote_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove_vote_button"
        android:visibility="gone"/>
    
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/show_poll_results_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_vote_results_button"
        android:visibility="gone"/>
</LinearLayout>