<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/topic_row_linear"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/topic_subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_subject"
            android:textColor="@color/primary_text"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/topic_locked_sticky"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/topic_locked_sticky"
            android:textColor="@color/accent"/>

    </LinearLayout>

    <TextView
        android:id="@+id/topic_started_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:text="@string/topic_started_by"
        android:textColor="@color/secondary_text"/>

    <TextView
        android:id="@+id/topic_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:text="@string/topic_stats"
        android:textColor="@color/secondary_text"/>

    <TextView
        android:id="@+id/topic_last_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:text="@string/topic_last_post"
        android:textColor="@color/secondary_text"/>
</LinearLayout>