<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_light">

    <LinearLayout
        android:id="@+id/child_board_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:baselineAligned="false"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/child_board_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:paddingBottom="7dp"
                android:text="@string/child_board_title"
                android:textColor="@color/accent"
                android:textSize="22sp" />

            <ImageButton
                android:id="@+id/child_board_expand_collapse_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/child_board_button"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"
                app:srcCompat="@drawable/ic_arrow_drop_down_accent_24dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/child_board_expandable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/child_board_mods"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:text="@string/child_board_mods"
                android:textColor="@color/secondary_text"
                android:textSize="12sp"
                android:textStyle="italic"
                android:visibility="gone" />

            <TextView
                android:id="@+id/child_board_stats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:text="@string/child_board_stats"
                android:textColor="@color/secondary_text"
                android:textSize="12sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/child_board_last_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/child_board_last_post"
                android:textColor="@color/primary_text"
                android:textSize="12sp"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>