<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/background_light"
    android:orientation="vertical">

    <TextView
        android:id="@+id/post_share_button"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@color/background_light"
        android:foreground="?android:attr/selectableItemBackground"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:paddingBottom="6dp"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:paddingTop="6dp"
        android:text="@string/post_share_button"
        android:textColor="@color/primary_text" />

    <TextView
        android:id="@+id/edit_post"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@color/background_light"
        android:foreground="?android:attr/selectableItemBackground"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:paddingBottom="6dp"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:paddingTop="6dp"
        android:text="@string/post_edit_button"
        android:textColor="@color/primary_text" />

    <TextView
        android:id="@+id/delete_post"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@color/background_light"
        android:foreground="?android:attr/selectableItemBackground"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:paddingBottom="6dp"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:paddingTop="6dp"
        android:text="@string/post_delete_button"
        android:textColor="@color/primary_text" />
</LinearLayout>